// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-anchor.vue Demo-基本用法 1`] = `
<div>
  <div
    anchor=""
    vusion-slot-name="default"
  >
    <!---->
     
  </div>
</div>
`;

exports[`u-anchor.vue Demo-基本用法 2`] = `
<div>
  <div
    anchor=""
    id="/#/components/u-toc/examples#高级"
    name="/#/components/u-toc/examples#高级"
    vusion-slot-name="default"
  >
    <!---->
     
  </div>
</div>
`;

exports[`u-anchor.vue Demo-基本用法 3`] = `
<div>
  <div
    anchor=""
    id="/#/components/u-anchor/examples#高级"
    name="/#/components/u-anchor/examples#高级"
    vusion-slot-name="default"
  >
    <!---->
     
  </div>
</div>
`;

exports[`u-anchor.vue Demo-基本用法 4`] = `
<div>
  <nav
    class="root"
  >
    <div
      class="body"
    >
      <div
        class="arrow"
        style="top: 8px;"
      />
       
      <div
        class="root"
      >
        <a
          class="link"
          href="#/examples"
          target=""
        >
          <span
            vusion-slot-name="label"
          >
            <!---->
             基础示例
          </span>
        </a>
         
        <div
          class="sub"
        >
          <div
            class="root"
          >
            <a
              class="link"
              href="##锚点1"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 锚点1
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
           
          <div
            class="root"
          >
            <a
              class="link"
              href="##/components/u-toc/examples#基本用法"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 value
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
        </div>
      </div>
       
      <div
        class="root"
      >
        <a
          class="link"
          href="#/api#api"
          target=""
        >
          <span
            vusion-slot-name="label"
          >
            <!---->
             UToc API
          </span>
        </a>
         
        <div
          class="sub"
        >
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#propsattrs"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Props/Attrs
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
           
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#slots"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Slots
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
           
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#events"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Events
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
        </div>
      </div>
       
      <div
        class="root"
      >
        <a
          class="link"
          href="#/api#api"
          target=""
        >
          <span
            vusion-slot-name="label"
          >
            <!---->
             UTocItem API
          </span>
        </a>
         
        <div
          class="sub"
        >
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#propsattrs"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Props/Attrs
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
           
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#slots"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Slots
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
           
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#events"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Events
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`u-anchor.vue Demo-基本用法 5`] = `
<div>
  <div
    anchor=""
    id="锚点2"
    name="锚点2"
    vusion-slot-name="default"
  >
    <!---->
     
  </div>
</div>
`;

exports[`u-anchor.vue Demo-基本用法 6`] = `
<div>
  <nav
    class="root"
  >
    <div
      class="body"
    >
      <div
        class="arrow"
        style="top: 8px;"
      />
       
      <div
        class="root"
      >
        <a
          class="link"
          href="#/examples"
          target=""
        >
          <span
            vusion-slot-name="label"
          >
            <!---->
             基础示例
          </span>
        </a>
         
        <div
          class="sub"
        >
          <div
            class="root"
          >
            <a
              class="link"
              href="##锚点1"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 锚点1
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
           
          <div
            class="root"
          >
            <a
              class="link"
              href="##/components/u-toc/examples#基本用法"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 value
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
        </div>
      </div>
       
      <div
        class="root"
      >
        <a
          class="link"
          href="#/api#api"
          target=""
        >
          <span
            vusion-slot-name="label"
          >
            <!---->
             UToc API
          </span>
        </a>
         
        <div
          class="sub"
        >
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#propsattrs"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Props/Attrs
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
           
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#slots"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Slots
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
           
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#events"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Events
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
        </div>
      </div>
       
      <div
        class="root"
      >
        <a
          class="link"
          href="#/api#api"
          target=""
        >
          <span
            vusion-slot-name="label"
          >
            <!---->
             UTocItem API
          </span>
        </a>
         
        <div
          class="sub"
        >
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#propsattrs"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Props/Attrs
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
           
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#slots"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Slots
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
           
          <div
            class="root"
          >
            <a
              class="link"
              href="#/api#events"
              target=""
            >
              <span
                vusion-slot-name="label"
              >
                <!---->
                 Events
              </span>
            </a>
             
            <div
              class="sub"
            />
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
